feat : MongoDB DM과 Chat에 적용